resolution de placement flex

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,4 @@
 body {
-    background-color: skyblue;
+    background: linear-gradient(135deg, white 55%, #A4C7E0 82%, #A4C7E0 100%);
+    background-repeat: no-repeat;
 }
