--- a/templates/home_page/homePage.html.twig
+++ b/templates/home_page/homePage.html.twig
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <title>GoLobe</title>
+{% block stylesheets %}
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/homepage.css">
-</head>
+    {% endblock %}
 
-<body>
+    {% block body %}
     <main>
         <div class="row">
             <div class="col-6">
@@ -61,6 +57,6 @@
     <footer>
     
     </footer>
-</body>
+    {% endblock %}
 
-</html>
+
