--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -2,4 +2,6 @@
 body {
     background: linear-gradient(135deg, white 55%, #A4C7E0 82%, #A4C7E0 100%);
     background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
