--- a/templates/home_page/homePage.html.twig
+++ b/templates/home_page/homePage.html.twig
@@ -1,7 +1,4 @@
-{% block stylesheets %}
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/homepage.css">
-    {% endblock %}
+{% extends 'base.html.twig' %}
 
     {% block body %}
     <main>
