--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="assets/CSS/bootstrap.min.css">
         <link rel="stylesheet" href="assets/CSS/homepage.css">
         <link rel="stylesheet" href="assets/CSS/navbar.css">
+        <link rel="stylesheet" href="assets/CSS/footer.css">
         {% endblock %}
 
         {% block javascripts %}
@@ -21,5 +22,7 @@
         {% include "navbar/navbar.html.twig" %}
         {% block body %}
         {% endblock %}
+        {% include "footer/footer.html.twig" %}
+
     </body>
 </html>
