--- a/templates/home_page/homePage.html.twig
+++ b/templates/home_page/homePage.html.twig
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html>
+{% extends 'base.html.twig' %}
 
-<head>
-    <title>GoLobe</title>
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/homepage.css">
-</head>
-
-<body>
+{% block body %}
     <main>
         <div class="row">
             <div class="col-6">
@@ -61,6 +54,4 @@
     <footer>
     
     </footer>
-</body>
-
-</html>
+{% endblock %}
