--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,10 +5,15 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
         {% block stylesheets %}
+ <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+ <link rel="stylesheet" href="asset/css/order.css">
+ <link rel="stylesheet" href="asset/css/helsinki.css">
         {% endblock %}
 
         {% block javascripts %}
+
             {% block importmap %}{{ importmap('app') }}{% endblock %}
+            <script src="assets/js/bootstrap.min.js"></script>
         {% endblock %}
     </head>
     <body>
