--- a/templates/footer/footer.html.twig
+++ b/templates/footer/footer.html.twig
@@ -53,7 +53,7 @@
         <ul>
             <li class="titleFooter">About us</li>
             <li><a href="">Our Story</a></li>
-            <li><a href="">Workv with us</a></li>
+            <li><a href="">Work with us</a></li>
             
         </ul>
     </div>
