--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -4,9 +4,13 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    font-family: 'Inter', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
   .carousel-item img {
     height: 500px;
     object-fit: cover;
   }
+
