--- a/public/assets/CSS/homepage.css
+++ b/public/assets/CSS/homepage.css
@@ -1,20 +1,3 @@
-/* Styles généraux pour le body */
-body {
-    background: linear-gradient(135deg, white 55%, #A4C7E0 82%, #A4C7E0 100%);
-    background-attachment: fixed;
-    background-size: cover;
-    font-family: 'Inter', sans-serif;
-    margin: 0;
-    padding: 0;
-}
-
-/* Réinitialisation et box-sizing */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 /* Styles pour les titres */
 .main-title {
     display: flex;
@@ -37,10 +20,9 @@ body {
     font-weight: bold;
 }
 
-/* Styles pour les paragraphes */
-p {
+.card-title {
     font-size: 24px;
-    color: #333;
+    font-weight: bold;
 }
 
 #check {
@@ -57,11 +39,6 @@ p {
     border-radius: 50%;
     box-shadow: -30.91px 20.91px 3px rgba(172, 226, 255, 1), -30.91px -15.91px 5px rgba(10, 131, 145, 0.39);
     object-fit: cover;
-}
-
-/* Styles pour le contenu principal */
-main {
-    padding: 20px;
 }
 
 /* Styles pour les boutons */
