--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,9 @@
         <link rel="stylesheet" href="assets/CSS/homepage.css">
         <link rel="stylesheet" href="assets/CSS/navbar.css">
         <link rel="stylesheet" href="assets/CSS/footer.css">
-         <link rel="stylesheet" href="asset/css/order.css">
+        <link rel="stylesheet" href="assets/CSS/order.css">
+        <link rel="stylesheet" href="assets/CSS/footer.css">
+   
         {% endblock %}
 
         {% block javascripts %}
