--- a/templates/order/order.html.twig
+++ b/templates/order/order.html.twig
@@ -22,7 +22,7 @@
         <div class="cart">
             <div class="cart-items">
                 <div class="cart-item">
-                    <img src="asset/images/Valo_Hotel6.jpg" alt="Helsinki" class="product-image">
+                    <img src="assets/IMG/Valo_Hotel6.jpg" alt="Helsinki" class="product-image">
                     <div class="product-details">
                         <h2>Valo Hotel</h2>
                         <p>6 road, michael fox 12334</p>
