--- a/templates/order/order.html.twig
+++ b/templates/order/order.html.twig
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="cart-item">
-                    <img src="asset/images/Valo_Hotel10.jpg" alt="Golan Museum visit" class="product-image">
+                    <img src="assets/IMG/Valo_Hotel10.jpg" alt="Golan Museum visit" class="product-image">
                     <div class="product-details">
                         <h2>Activity 1</h2>
                         <p>Golan Museum visit</p>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div class="cart-item">
-                    <img src="asset/images/Valo_Hotel8.jpg" alt="Fjord visit" class="product-image">
+                    <img src="assets/IMG/Valo_Hotel8.jpg" alt="Fjord visit" class="product-image">
                     <div class="product-details">
                         <h2>Activity 2</h2>
                         <p>Fjord visit</p>
