--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,14 +9,12 @@
         <link rel="stylesheet" href="assets/CSS/homepage.css">
         <link rel="stylesheet" href="assets/CSS/navbar.css">
         <link rel="stylesheet" href="assets/CSS/footer.css">
-        <link rel="stylesheet" href="assets/css/order.css">
+        <link rel="stylesheet" href="assets/CSS/order.css">
         {% endblock %}
 
         {% block javascripts %}
             <script src="assets/JS/bootstrap.min.js"></script>
-        
             {% block importmap %}{{ importmap('app') }}{% endblock %}
-            <script src="assets/js/bootstrap.min.js"></script>
         {% endblock %}
     </head>
     <body>
