--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="assets/CSS/navbar.css">
         <link rel="stylesheet" href="assets/CSS/footer.css">
         <link rel="stylesheet" href="assets/CSS/order.css">
+        <link rel="stylesheet" href="assets/CSS/help.css">
         {% endblock %}
 
         {% block javascripts %}
