--- a/public/assets/CSS/help.css
+++ b/public/assets/CSS/help.css
@@ -1,20 +1,15 @@
-body {
-    font-family: Arial, sans-serif;
-    color: #333;
-    margin: 0;
-    padding: 0;
+.helper {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
 }
 
 .contact-container {
-    background-color: white;
     padding: 20px 40px;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
+    align-items: center;
 }
 
 .contact-container h1 {
@@ -29,6 +24,8 @@ body {
     display: flex;
     align-items: center;
     margin: 20px 0;
+    text-align: center;
+    justify-content: center;
 }
 
 .contact-method img {
@@ -43,4 +40,10 @@ body {
 
 .contact-info p {
     margin: 2px 0;
+}
+
+.conUs {
+    text-align: center !important;
+    justify-content: center;
+    text-decoration: underline;
 }
