--- a/public/assets/CSS/adminDashboard.css
+++ b/public/assets/CSS/adminDashboard.css
@@ -1,13 +1,3 @@
-/* Styles pour l'en-tête */
-#header {
-    /* Styles pour la navbar */
-}
-
-/* Styles pour le pied de page */
-#footer {
-    /* Styles pour le pied de page */
-}
-
 /* Styles pour le contenu principal */
 #main-content {
     display: flex;
@@ -16,18 +6,28 @@
 /* Styles pour la barre latérale */
 #sidebar {
     width: 250px;
-    background-color: #f7f7f7;
+    background-color: #E6E6E6;
     padding: 20px;
 }
 
 #sidebar-menu {
     list-style: none;
     padding: 0;
+    color: transparent;
 }
 
-.sidebar-item {
+.fa-gauge {
+    font-family:'Inter', sans-serif; !important
+}
+
+.side-items {
     margin: 15px 0;
     font-size: 16px;
+    color: #333;
+}
+
+.side-items a {
+    text-decoration: none;
     color: #333;
 }
 
@@ -35,7 +35,7 @@
 #profile-details {
     flex: 1;
     padding: 40px;
-    background: linear-gradient(to bottom right, #FFFFFF, #E0EFF9);
+    background: transparent;
     border-radius: 10px;
     margin: 20px;
 }
@@ -43,6 +43,7 @@
 #profile-title {
     font-size: 24px;
     color: #333;
+    font-weight: bold;
 }
 
 #profile-info {
@@ -76,11 +77,12 @@
 }
 
 #edit-btn {
-    background-color: #333;
-    color: #fff;
-    border: none;
+    background-color: #fff;
+    color: #333;
+    border: #333;
+    border-color: #333;
     padding: 10px 15px;
-    border-radius: 5px;
+    border-radius: 15px;
     cursor: pointer;
 }
 
@@ -102,14 +104,25 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     margin-top: 5px;
+    width: 30%;
 }
 
 #edit-details-btn {
-    background-color: #d9534f;
-    color: #fff;
+    background-color:transparent;
+    color: #333;
     border: none;
     padding: 10px 15px;
     border-radius: 5px;
     cursor: pointer;
     margin-top: 20px;
+    width: 10%;
 }
+
+.fa-pen{
+    color: red;
+}
+
+#dashboard {
+    margin-bottom: 7%;
+}
+
