--- a/templates/home_page/homePage.html.twig
+++ b/templates/home_page/homePage.html.twig
@@ -5,8 +5,9 @@
 
     <main>
         <div class="row">
-            <div class="col-6">
-                <img id="hmpage" src="assets/IMG/homepage.jpg" alt="homepageville" height="540px">
+            <div class="col-1"></div>
+            <div class="col-5">
+                <img id="hmpage" src="assets/IMG/homepage.jpg" alt="homepageville">
             </div>
             <div class="col-6">
     <h3 id="explore">EXPLORE THE WORLD</h3>
