--- a/templates/destination/destination.html.twig
+++ b/templates/destination/destination.html.twig
@@ -9,13 +9,13 @@
 <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="10000">
-      <img src="IMG\port-barcelona-evening-spain.jpg" class="d-block w-100" alt="...">
+      <img src="assets\IMG\port-barcelona-evening-spain.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item" data-bs-interval="2000">
-      <img src="IMG\19876777-aerien-vue-de-barcelone-ville-horizon-et-sagrada-familia-cathedrale-a-le-coucher-du-soleil-photo-2384722782.jpg" class="d-block w-100" alt="...">
+      <img src="assets\IMG\19876777-aerien-vue-de-barcelone-ville-horizon-et-sagrada-familia-cathedrale-a-le-coucher-du-soleil-photo-2384722782.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="IMG\Barcelone_Espagne_Gorgeous-and-amazing-Park-Guel-in-Barcelona-min-1-2122104817.jpeg" class="d-block w-100" alt="...">
+      <img src="assets\IMG\Barcelone_Espagne_Gorgeous-and-amazing-Park-Guel-in-Barcelona-min-1-2122104817.jpeg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -51,7 +51,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4 ">
         <div class="col ">
           <div class="card h-100 ">
-            <img src="IMG\catalognia Rigoletto.jpg" class="card-img-top" alt="Catalonia Rigoletto">
+            <img src="assets\IMG\catalognia Rigoletto.jpg" class="card-img-top" alt="Catalonia Rigoletto">
             <div class="card-body">
               <h5 class="card-title">Catalonia Rigoletto</h5>
               <div class="star-rating me-3">
@@ -76,7 +76,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="IMG\Sercotelamisterarthotel.jpg" class="card-img-top" alt="oups">
+            <img src="assets\IMG\Sercotelamisterarthotel.jpg" class="card-img-top" alt="oups">
             <div class="card-body">
               <h5 class="card-title">Sercotel Amister Art Hotel</h5>
               <div class="star-rating me-3">
@@ -100,7 +100,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="IMG\execampus.jpg" class="card-img-top" alt="Norvege">
+            <img src="assets\IMG\execampus.jpg" class="card-img-top" alt="Norvege">
             <div class="card-body">
               <h5 class="card-title">Exe Campus</h5>
                <div class="star-rating me-3">
