ajout fx activity

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,9 @@
         <link rel="stylesheet" href="assets/CSS/footer.css">
         <link rel="stylesheet" href="assets/CSS/order.css">
         <link rel="stylesheet" href="assets/CSS/help.css">
+        <link rel="stylesheet" href="activities/CSS/help.css">
+        <link rel="stylesheet" href="activities2/CSS/help.css">
+        <link rel="stylesheet" href="activities3/CSS/help.css">
         {% endblock %}
 
         {% block javascripts %}
