--- a/public/assets/CSS/order.css
+++ b/public/assets/CSS/order.css
@@ -1,66 +1,10 @@
-/* styles.css */
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f9f9f9;
-    margin: 0;
-    padding: 0;
-}
+styles.css */
 
 .container {
     width: 80%;
     margin: 0 auto;
     padding: 20px;
-}
-
-header {
-    background-color: #ffffff;
-    padding: 10px 0;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-header .container {
-    display: flex;
-    align-items: center;
-}
-
-header .logo {
-    width: 150px;
-}
-
-header input[type="text"] {
-    flex: 1;
-    padding: 10px;
-    margin: 0 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-}
-
-header .btn-search {
-    padding: 10px 20px;
-    background-color: #5cb85c;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-header .user-info {
-    margin-left: 10px;
-}
-
-header .user-icon {
-    font-size: 24px;
-    text-decoration: none;
-    color: #333;
-}
-
-main h1 {
-    text-align: center;
-    margin-top: 20px;
-    font-size: 24px;
-    color: #333;
-}
-
+} 
 .cart {
     display: flex;
     margin-top: 20px;
@@ -69,7 +13,7 @@ main h1 {
 .cart-items {
     flex: 2;
     margin-right: 20px;
-}
+} 
 
 .cart-item {
     background-color: #fff;
@@ -81,8 +25,7 @@ main h1 {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     box-shadow: 0.91px 0.91px 2px #b5e2e6, -0.91px -0.91px 2px #b1ebe6,
         inset 1.91px 1.91px 2px #b0b4c7, inset -2.91px -2.91px 2px #bcc0cc;
-}
-
+} 
 .product-image {
     box-shadow: 2.91px 2.91px 5px #d3c9c9, -2.91px -2.91px 2px #eee6e6,
         inset 2.91px 2.91px 2px #98a0c0, inset -2.91px -2.91px 2px #8a95b4;
