--- a/templates/order/order.html.twig
+++ b/templates/order/order.html.twig
@@ -5,18 +5,7 @@
 
 
 {% block body %}
-    {# <h1>Recap of order</h1> #}
-
- {# <header>
-        <div class="container">
-            <img src="asset/images/logo.svg" alt="GoLobe" class="logo">
-            <input type="text" placeholder="Search hotel or activities...">
-            <button class="btn-search">Search</button>
-            <div class="user-info">
-                <a href="#" class="user-icon">👤</a>
-            </div>
-        </div>
-    </header> #}
+    
     <main class="container">
         <h1 class="titre">Recap of my cart</h1>
         <div class="cart">
@@ -46,7 +35,7 @@
                     </div>
                 </div>
                 <div class="cart-item">
-                    <img src="assets/IMG/Valo_Hotel8.jpg" alt="Fjord visit" class="product-image">
+                    <img src="asset/images/Valo_Hotel8.jpg" alt="Fjord visit" class="product-image">
                     <div class="product-details">
                         <h2>Activity 2</h2>
                         <p>Fjord visit</p>
