--- a/templates/home_page/homePage.html.twig
+++ b/templates/home_page/homePage.html.twig
@@ -3,11 +3,11 @@
 
 {% block body %}
 
-    <main>
+    <main id="homepage">
         <div class="row">
             <div class="col-1"></div>
             <div class="col-5">
-                <img id="hmpage" src="assets/IMG/homepage.jpg" alt="homepageville">
+                <img id="imgHomepage" src="assets/IMG/homepage.jpg" alt="homepageville">
             </div>
             <div class="col-6">
     <h3 id="explore">EXPLORE THE WORLD</h3>
