modify css navbar

--- a/templates/navbar/navbar.html.twig
+++ b/templates/navbar/navbar.html.twig
@@ -5,17 +5,17 @@
       {# The logo #}
       <img src="assets/img/logoSM.svg" alt="Logo" class="navbar-brand" id="logo" href="#">
       {# The search bar #}
-      <div class="d-flex">
-        <form class="d-flex">
-          <input class="form-control me-sm-2" type="search" placeholder="Search" id="searchButton">
+      <div class="d-flex w-50">
+        <form class="d-flex w-75">
+          <input class="form-control me-sm-2 flex-fill" type="search" placeholder="Search" id="searchButton">
         </form>
         {# The two buttons : Sign up and Login #}
         <ul class="navbar-nav me-auto">
-          <li class="nav-item">
-            <a class="nav-link button signup" href="#">Sign up</a>
+          <li class="nav-item mx-2">
+            <a class="nav-link button signup px-2 mx-1 w-100" href="#">Sign up</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link button login" href="#">Login</a>
+          <li class="nav-item mx-2">
+            <a class="nav-link button login px-3 mx-1 w-100" href="#">Login</a>
           </li>
         </ul>
         
