--- a/templates/activities2/barcelona.html.twig
+++ b/templates/activities2/barcelona.html.twig
@@ -1,18 +1,23 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello Activities3Controller!{% endblock %}
+{% block title %}Barcelna benvenudo!{% endblock %}
 
 {% block body %}
-<h1>Activities list</h1>
 
+<h1 class="dalal">Welcome to Barcelona! </h1>
+<h2 class="dalal">Bienvenudo a Barcelona</h2>
+<h3 class="taneu">Choose your activities:</h3>
+
+<div class="tokyo">
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card h-100">
-      <img src="assets/IMG/Valo_Hotel10.jpg" class="card-img-top" alt="...">
+      <img src="assets/IMG/esGuell.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">Guêl Parc</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. </p>
       </div>
+      <p class="xaliss">Price: 60€</p>
       <div class="card-footer">
         <small class="text-body-secondary"><button class="cartess">Add to cart</button></small>
       </div>
@@ -20,11 +25,12 @@
   </div>
   <div class="col">
     <div class="card h-100">
-      <img src="assets/IMG/Valo_Hotel10.jpg" class="card-img-top" alt="...">
+      <img src="assets/IMG/esPicasso.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Picasso Museum of Barcelona</h5>
         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
       </div>
+        <p class="xaliss">Price: 30€</p>
       <div class="card-footer">
         <small class="text-body-secondary"><button class="cartess">Add to cart</button></small>
       </div>
@@ -32,11 +38,12 @@
   </div>
   <div class="col">
     <div class="card h-100">
-      <img src="assets/IMG/Valo_Hotel10.jpg" class="card-img-top" alt="...">
+      <img src="assets/IMG/esCN.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Camp Nou Visit</h5>
         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
       </div>
+        <p class="xaliss">Price: 120€</p>
       <div class="card-footer">
         <small class="text-body-secondary"><button class="cartess">Add to cart</button></small>
       </div>
@@ -44,11 +51,12 @@
   </div>
   <div class="col">
     <div class="card h-100">
-      <img src="assets/IMG/Valo_Hotel9.jpg" class="card-img-top" alt="...">
+      <img src="assets/IMG/esKayak.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Kayak</h5>
         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
       </div>
+      <p class="xaliss">Price: 40€</p>
       <div class="card-footer">
         <small class="text-body-secondary"><button class="cartess">Add to cart</button> </small>
       </div>
@@ -56,11 +64,12 @@
   </div>
   <div class="col">
     <div class="card h-100">
-      <img src="assets/IMG/Valo_Hotel8.jpg" class="card-img-top" alt="...">
+      <img src="assets/IMG/EsAqua.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Aquarium of Barcelona</h5>
         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
       </div>
+      <p class="xaliss">Price: 25€</p>
       <div class="card-footer">
         <small class="text-body-secondary"><button class="cartess">Add to cart</button></small>
       </div>
@@ -68,17 +77,21 @@
   </div>
   <div class="col">
     <div class="card h-100">
-      <img src="assets/IMG/Valo_Hotel7.jpg" class="card-img-top" alt="...">
+      <img src="assets/IMG/esPaddle.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        <h5 class="card-title">Paddleboard</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. </p>
       </div>
+      <p class="xaliss">Price: 70€</p>
       <div class="card-footer">
         <small class="text-body-secondary"><button class="cartess">Add to cart</button></small>
       </div>
     </div>
   </div>
 </div>
+</div>
+<br>
+<br>
 <br>
 <br>
 {% endblock %}
