add navbar connected unfinished

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="assets/CSS/bootstrap.min.css">
         <link rel="stylesheet" href="assets/CSS/homepage.css">
         <link rel="stylesheet" href="assets/CSS/navbar.css">
+        <link rel="stylesheet" href="assets/CSS/navbarConnected.css">
         <link rel="stylesheet" href="assets/CSS/footer.css">
         <link rel="stylesheet" href="assets/CSS/order.css">
         <link rel="stylesheet" href="assets/CSS/adminDashboard.css">
@@ -26,7 +27,8 @@
     </head>
     <body>
 
-        {% include "navbar/navbar.html.twig" %}
+        {# {% include "navbar/navbar.html.twig" %} #}
+        {% include "navbar_connected/navbarConnected.html.twig" %}
         {% block body %}
         {% endblock %}
         {% include "footer/footer.html.twig" %}
