--- a/public/assets/CSS/navbarConnected.css
+++ b/public/assets/CSS/navbarConnected.css
@@ -9,16 +9,23 @@
     border-color: #000000;
 }
 /* Two classes for the color of the button */
-#signup {
-    background-color: #A4C7E0;
+#stay {
+    color: #000000;
+    font-size: larger;
 }
 
-#login {
-    background-color: #000000;
+#imgAirplane, #imgProfile{
+    width: 10%;
+}
+
+#profile {
+    color: black;
+    font-size: larger;
+
 }
 
 /* The shared code for both buttons */
-#visitor .button {
+.button {
   align-items: center;
   border: 0;
   border-radius: 100px;
@@ -46,18 +53,18 @@
   vertical-align: middle;
 }
 
-#visitor .button-18:hover,
-#visitor .button-18:focus { 
+.button-18:hover,
+.button-18:focus { 
   background-color: #16437E;
   color: #ffffff;
 }
 
-#visitor .button-18:active {
+.button-18:active {
   background: #09223b;
   color: rgb(255, 255, 255, .7);
 }
 
-#visitor .button-18:disabled { 
+.button-18:disabled { 
   cursor: not-allowed;
   background: rgba(0, 0, 0, .08);
   color: rgba(0, 0, 0, .3);
