--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="assets/CSS/adminDashboard.css">
         <link rel="stylesheet" href="assets/CSS/help.css">
         <link rel="stylesheet" href="assets/CSS/rgpd.css">
-
+        <link rel="stylesheet" href="assets/CSS/payment.css">
         {% endblock %}
 
         {% block javascripts %}
